# lexiweave

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: global.example.json
config/languages/: ca.example.json  es.example.json
src/lexiweave/: __init__.py  cli.py  config.py
src/lexiweave/assessment/: CLAUDE.md  gap_report.py  grammar_store.py
src/lexiweave/exporters/: CLAUDE.md  anki_export.py
src/lexiweave/generators/: CLAUDE.md  audio.py  cognates.py  definitions.py  sentences.py
src/lexiweave/importers/: CLAUDE.md  duolingo.py
src/lexiweave/tracking/: CLAUDE.md  stats.py  strength.py  vocabulary_store.py
src/lexiweave/utils/: CLAUDE.md  audio.py  cache.py  llm.py
tests/: conftest.py  test_anki_export.py  test_audio.py  test_cache.py  test_cognates.py  test_config.py  test_definitions.py  test_duolingo_importer.py  test_gap_report.py  test_grammar_store.py  test_llm.py  test_sentences.py  test_stats.py  test_strength.py  test_vocabulary_store.py
tests/fixtures/: sample_languages.csv  sample_leaderboards.csv  sample_vocab.csv
